fixed overflow scroll on the players box

--- a/client/styles.css
+++ b/client/styles.css
@@ -31,6 +31,8 @@ label {
 	position: fixed;
 	top: 30px;
 	right: 30px;
+	overflow: scroll;
+	height: 500px
 }
 
 #min {
